--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
+    "next-view-transitions": "^0.1.1",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-datepicker": "^6.6.0",
